test/org/midica/testfiles/failing/eff-func-param-too-low-1.midica
INCLUDE inc/instruments.midica


0: balance.line(63,-65)
